fixed vh issue on mobile devices.

--- a/app/assets/styles/modules/components/_half-screen.css
+++ b/app/assets/styles/modules/components/_half-screen.css
@@ -1,6 +1,6 @@
 .half-screen {
   height: 50vh;
-  height: calc(var(--var, 100vh) * 100);
+  height: calc(var(--var, 1vh) * 100);
   
   @mixin atLarge {
     width: 50vw;
